Fix z-index issue in Filter by Attribute dropdowns

--- a/assets/js/blocks/attribute-filter/style.scss
+++ b/assets/js/blocks/attribute-filter/style.scss
@@ -17,7 +17,6 @@
 	margin-bottom: $gap;
 	border-radius: inherit;
 	border-color: inherit;
-	z-index: 30;
 
 	&.style-dropdown {
 		position: relative;
@@ -30,11 +29,6 @@
 		.wc-block-components-filter-submit-button {
 			height: 36px;
 			line-height: 1;
-		}
-
-		> .wc-blocks-components-form-token-field-wrapper {
-			position: relative;
-			z-index: 2;
 		}
 
 		> svg {
